<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="9dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black_gradient"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        >

        <ImageView
            android:id="@+id/thumbnail_image_staff"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:contentDescription="@string/description_image_staff_person"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/type_productor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_productor"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/info_productor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_du_productor"
            tools:text="Christopher Nolan"
            android:textColor="@color/white_nuance" />
        </LinearLayout>

</androidx.cardview.widget.CardView>

